Changed CI tests appropriate for new elastic bamboo environment